# skyscraper-game-c

./: README.md
skyscraper-game/: CMakeLists.txt  skyscraper_game
skyscraper-game/includes/: ft.h
skyscraper-game/sources/: check.c  main.c  parser.c  solver.c  utils.c
